clase chip gris

--- a/index.html
+++ b/index.html
@@ -53,5 +53,9 @@
     </div>
 <hr>
 <i class="fa-solid fa-triangle-exclamation warning-icon-aptus" style="font-size:3rem;"></i>
+    <hr>
+<div class="chip-aptus chip-aptus-gray">
+    Texto de prueba
+</div>
 </body>
 </html>
